s3/kube/service-gateway-config-portal2.yml
---
kind: Service
apiVersion: v1
metadata:
  name: portal2-content
  namespace: doctools
spec:
  type: ExternalName
  externalName: tenant-doctools-portal2-builds.s3-website.us-east-2.amazonaws.com
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
