s3/kube/service-gateway-config-prod.yml
---
kind: Service
apiVersion: v1
metadata:
  name: docportal-content
  namespace: doctools
spec:
  type: ExternalName
  externalName: tenant-doctools-prod-builds.s3-website.us-east-2.amazonaws.com
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
