s3/kube/service-gateway-config.yml
---
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}
  namespace: ${POD_NAME}
  labels:
    app: ${APP_NAME}
    gwcp.guidewire.com/dept: \"${DEPT_CODE}\"
    gwcp.guidewire.com/maintained-by: ${POD_NAME}
    gwcp.guidewire.com/created-by: ${POD_NAME}
    gwcp.guidewire.com/tenant-name: ${POD_NAME}
    gwcp.guidewire.com/version: ${TAG_VERSION}
    gwcp.guidewire.com/app-name: ${APP_NAME}
spec:
  type: ExternalName
  externalName: ${SERVICE_EXTERNAL_NAME}
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
