s3/kube/ingress-portal2.yml
---
kind: Service
apiVersion: v1
metadata:
  name: portal2-content-us-east-2
  namespace: doctools
spec:
  type: ExternalName
  externalName: tenant-doctools-portal2-builds.s3-website.us-east-2.amazonaws.com
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: doctools
  name: doctools-portal2-builds-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
      http-request set-header Host tenant-doctools-portal2-builds.s3-website.us-east-2.amazonaws.com
spec:
  rules:
    - host: "portal2.internal.us-east-2.service.guidewire.net"
      http:
        paths:
          - backend:
              service:
                name: portal2-content-us-east-2
                port:
                  number: 80
            path: /
            pathType: Prefix
