s3/kube/ingress-prod.yml
---
kind: Service
apiVersion: v1
metadata:
  name: docportal-content-${DEPLOY_ENV}
  namespace: doctools
spec:
  type: ExternalName
  externalName: tenant-doctools-prod-builds.s3-website.us-east-2.amazonaws.com
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: doctools
  name: doctools-${DEPLOY_ENV}-builds-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
      http-request set-header Host tenant-doctools-prod-builds.s3-website.us-east-2.amazonaws.com
spec:
  rules:
    - host: "ditaot.internal.${DEPLOY_ENV}.service.guidewire.net"
      http:
        paths:
          - backend:
              service:
                name: docportal-content-${DEPLOY_ENV}
                port:
                  number: 80
            path: /
            pathType: Prefix
